--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,6 @@ name: React Project
 on:
   push:
     branches: [main]
-  
   workflow_dispatch:
 
 permissions:
@@ -11,26 +10,26 @@ permissions:
 
 jobs:
   build_deploy:
-  runs-on: windows-latest
+    runs-on: windows-latest
 
-  steps:
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14 # Example Node.js version
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
-    
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Build Project
-      run: npm run build
+      - name: Build Project
+        run: npm run build
 
-    - name: Deploy
-      run: JamesIves/github-pages-deploy-action@v4.1.0
-      with:
-        branch: action-test
-        folder: build
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4.1.0
+        with:
+          branch: action-test
+          folder: build
+
